--- a/Frontend/src/routes/Register.module.css
+++ b/Frontend/src/routes/Register.module.css
@@ -12,7 +12,7 @@
 
 .registerContainer{
     width: 50%;
-    height: 100%;
+    height: 90%;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -181,4 +181,34 @@
 
 .link{
     font-size: 1.2rem;
+}
+
+/* tablets */
+@media (max-width: 880px) {
+    .registerContainer{
+        width: 80%;
+        padding: 20px 1rem;
+    }
+    .formControl label{
+        font-size: 1rem;
+    }
+    .fieldsSideBySide{
+        display: block;
+    }
+    .fieldsSideBySide div{
+        width: 100%;
+    }
+    .fieldsSideBySide div:nth-child(1){
+        margin-bottom: 1.5rem;;
+    }
+    .divButtons{
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+    .divButtons input,
+    .divButtons button{
+        font-size: 1rem;
+        width: 50%;
+    }
+    
 }
