--- a/gamehub.client/src/components/Navbar.module.css
+++ b/gamehub.client/src/components/Navbar.module.css
@@ -5,5 +5,49 @@
     margin: 0px;
     width: 100%;
     height: 100%;
-    padding: 1rem 2rem 5px 2rem;
+    padding: 1rem 2rem 1rem 2rem;
+    border-bottom: 2px solid var(--mediumgrey);
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    background-color: var(--clearblack);
+}
+
+.ulNavbar{
+    display: flex;
+    align-items: center;
+    list-style: none;
+    gap: 1rem;
+    height: 100%;
+}
+
+.ulNavbar .navbarLink, .ulNavbar li{
+    font-size: 22px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-shadow: 1px 1px 2px var(--turquoise);
+    transition: all 0.2s ease-in-out;
+    border: 2px solid transparent;
+    border-radius: 50px;
+    padding: 5px 15px;
+    cursor: pointer;
+}
+
+.ulNavbar .navbarLink:hover{
+    border: 2px solid var(--turquoise);
+    background-color: var(--turquoise);
+    color: var(--black);
+}
+
+.ulNavbar li:hover{
+    transform: scale(1.1);
+}
+
+.ulNavbar button{
+    width: 100%;
+    padding: 5px 20px;
+    transition: all 0.2s ease-in-out;
+}
+
+.divNavbar button:hover{
+    transform: scale(1.1);
 }
