--- a/gamehub.client/src/routes/Logado.module.css
+++ b/gamehub.client/src/routes/Logado.module.css
@@ -5,7 +5,50 @@
     align-items: center;
 }
 
+.containerPosts{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+}
 
+.divPost{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-bottom: 2px solid var(--mediumgrey);
+    width: 100%;
+    padding: 1rem 10px 1rem 10px;
+    gap: 15px;
+}
+
+.postHeader{
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.postHeader p, .author, .date{
+    font-size: 14px;
+    color: var(--lightGrey);
+}
+
+.postContent{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.postContent .title{
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.postContent .content{
+    font-size: 18px;
+    color: var(--lightGrey);
+}
 
 .containerPost{
     display: flex;
@@ -14,6 +57,27 @@
     align-items: center;
     margin-bottom: 2rem;
     padding: 20px;
+}
+
+.postFooter{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.postFooter button{
+    background-color: transparent;
+    font-size: 20px;
+}
+
+.postFooter .postIcon{
+    fill: var(--grey);
+    transition: all 0.3s ease;
+}
+
+.postFooter .postIcon:hover{
+    fill: var(--turquoise);
+    transform: scale(1.2);
 }
 
 h2{
