--- a/gamehub.client/src/routes/Logado.module.css
+++ b/gamehub.client/src/routes/Logado.module.css
@@ -5,6 +5,53 @@
     align-items: center;
 }
 
+.buttonMakePost{
+    background-color: transparent;
+    padding: 5px 18px 5px 15px;
+    font-size: 22px;
+    font-weight: bold;
+    border: 2px solid var(--lightGrey);
+    border-radius: 50px;
+    transition: all 0.2s ease-in-out;
+}
+
+.divMakePost{
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.divMakePost p{
+    transition: all 0.2s ease-in-out;
+}
+
+.makePostIcon{
+    fill: transparent;
+    transition: all 0.2s;
+}
+
+.buttonMakePost:hover{
+    border: 2px solid var(--turquoise);
+    transform: scale(1.02);
+}
+
+.buttonMakePost:hover p{
+    color: var(--turquoise);
+}
+
+.buttonMakePost:hover .makePostIcon{
+    fill: var(--turquoise);
+}
+
+.formMakePost{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 1rem;
+    width: 100%;
+    height: 100%;
+}
+
 .containerPosts{
     display: flex;
     flex-direction: column;
@@ -50,15 +97,6 @@
     color: var(--lightGrey);
 }
 
-.containerPost{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 2rem;
-    padding: 20px;
-}
-
 .postFooter{
     display: flex;
     flex-direction: row;
@@ -78,74 +116,4 @@
 .postFooter .postIcon:hover{
     fill: var(--turquoise);
     transform: scale(1.2);
-}
-
-h2{
-    color: var(--turquoise);
-    margin-bottom: 15px;
-}
-
-.formPost{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border: 2px solid var(--turquoise);
-    border-radius: 10px;
-    padding: 20px;
-    background-color: var(--clearblack);
-    gap: 1rem;
-}
-
-div label{
-    margin-right: 2px;
-    font-size: 18px;
-    color: var(--turquoise);
-}
-
-div input, textarea{
-    background-color: transparent;
-    border: none;
-    border-left: 2px solid var(--turquoise);
-    border-bottom: 2px solid var(--turquoise);
-    border-bottom-left-radius: 5px;
-    padding: 2px 2px 2px 6px;
-    color: var(--turquoise);
-    font-size: 15px;
-}
-
-div input::placeholder, textarea::placeholder{
-    font-size: 15px;
-    color: var(--mediumgrey);
-}
-
-textarea{
-    padding-top: 5px;
-    outline: none;
-}
-
-.divTextarea{
-    display: flex;
-    flex-direction: column;
-}
-
-.divButton{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.button{
-    background-color: transparent;
-    padding: 10px;
-    border: 2px solid var(--turquoise);
-    border-radius: 5px;
-    color: var(--turquoise);
-    transition: all 0.3s ease;
-}
-
-.button:hover{
-    background-color: var(--turquoise);
-    color: var(--clearblack);
-    font-weight: bold;
-    transform: scale(1.1);
 }
