--- a/gamehub.client/src/components/CommentsForm.module.css
+++ b/gamehub.client/src/components/CommentsForm.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 1rem;
 }
 
 .formComment{
@@ -33,4 +34,62 @@
     border-color: var(--turquoise);
     color: var(--turquoise);
     min-height: 114px;
+}
+
+.divCommentsList{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.containerComments{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 15px 8px 10px;
+    border-bottom: 1px solid var(--grey);
+    gap: 5px;
+}
+
+.containerComments:hover{
+    transition: all 0.3s ease;
+    background-color: rgba(30, 30, 30);
+}
+
+.commentHeader{
+    display: flex;
+    flex-direction: row;
+}
+
+.commentHeader .name{
+    font-size: 13px;
+    color: var(--lightGrey);
+    font-weight: bold;
+}
+
+.commentContent .content{
+    font-size: 15px;
+    color: var(--lightGrey);
+}
+
+.commentFooter{
+    padding-top: 5px;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+
+.commentFooter button{
+    background-color: transparent;
+    font-size: 17px;
+}
+
+.commentFooter .commentIcon{
+    fill: var(--grey);
+    transition: all 0.3s ease;
+}
+
+.commentFooter .commentIcon:hover{
+    fill: var(--turquoise);
+    transform: scale(1.2);
 }
