--- a/gamehub.client/src/routes/Logado.module.css
+++ b/gamehub.client/src/routes/Logado.module.css
@@ -58,6 +58,7 @@
     align-items: center;
     justify-content: center;
     width: 50%;
+    gap: 1rem;
 }
 
 .divPost{
@@ -68,6 +69,13 @@
     width: 100%;
     padding: 1rem 10px 1rem 10px;
     gap: 15px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    transition: all 0.3s ease;
+}
+
+.divPost:hover{
+    background-color: var(--clearblack);
 }
 
 .postHeader{
@@ -79,6 +87,10 @@
 .postHeader p, .author, .date{
     font-size: 14px;
     color: var(--lightGrey);
+}
+
+.postHeader .author{
+    font-weight: bold;
 }
 
 .postContent{
