--- a/gamehub.client/src/components/CommentsForm.module.css
+++ b/gamehub.client/src/components/CommentsForm.module.css
@@ -7,6 +7,7 @@
 }
 
 .formComment{
+    position: relative;
     width: 100%;
 }
 
@@ -22,7 +23,7 @@
     font-size: 16px;
     outline: none;
     transition: all 0.3s ease-in-out;
-    transition-property: border, color, min-height;
+    transition-property: border, padding, color, min-height;
 }
 
 .formComment textarea:hover{
@@ -33,7 +34,38 @@
 .formComment textarea:focus{
     border-color: var(--turquoise);
     color: var(--turquoise);
+    padding-right: 55px;
+    padding-left: 25px;
     min-height: 114px;
+}
+
+.footerFormComment{
+    position: absolute;
+    padding: 18px 26px;
+    right: 0;
+    bottom: 0;
+    display: none;
+}
+
+.footerFormComment button{
+    background-color: transparent;
+    border-bottom: 2px solid transparent;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    font-size: 15px;
+    color: var(--mediumgrey);
+    padding: 3px 3px 0;
+    transition: all 0.2s ease-in-out;
+}
+
+.footerFormComment button:hover{
+    background-color: var(--clearblack);
+    color: var(--lightGrey);
+    border-bottom-color: var(--lightGrey);
+}
+
+.formComment:focus-within .footerFormComment{
+    display: flex;
 }
 
 .divCommentsList{
@@ -84,12 +116,26 @@
     font-size: 17px;
 }
 
-.commentFooter .commentIcon{
-    fill: var(--grey);
+.commentFooter .commentIcon, .commentFooter .commentIconDislike{
     transition: all 0.3s ease;
 }
 
 .commentFooter .commentIcon:hover{
     fill: var(--turquoise);
     transform: scale(1.2);
+}
+
+.commentFooter .commentIconDislike:hover{
+    fill: crimson;
+    transform: scale(1.2);
+}
+
+.opinionActivatedLike{
+    fill: var(--turquoise);
+    transform: scale(1.3);
+}
+
+.opinionActivatedDislike{
+    fill: crimson;
+    transform: scale(1.3);
 }
