--- a/gamehub.client/src/routes/Logado.module.css
+++ b/gamehub.client/src/routes/Logado.module.css
@@ -120,12 +120,30 @@
     font-size: 20px;
 }
 
-.postFooter .postIcon{
-    fill: var(--grey);
+.postFooter .postIcon, .postFooter .postIconDislike{
+    border: 2px solid transparent;
+    padding: 1px;
+    border-radius: 5px;
     transition: all 0.3s ease;
+    font-size: 1.6rem;
 }
 
 .postFooter .postIcon:hover{
     fill: var(--turquoise);
     transform: scale(1.2);
+}
+
+.postFooter .postIconDislike:hover{
+    fill: crimson;
+    transform: scale(1.2);
+}
+
+.opinionActivatedLike{
+    fill: var(--turquoise);
+    transform: scale(1.3);
+}
+
+.opinionActivatedDislike{
+    fill: crimson;
+    transform: scale(1.3);
 }
