--- a/gamehub.client/src/routes/Logado.module.css
+++ b/gamehub.client/src/routes/Logado.module.css
@@ -147,3 +147,15 @@
     fill: crimson;
     transform: scale(1.3);
 }
+
+.divLike{
+    position: relative;
+}
+
+.divLike p{
+    position: absolute;
+    margin-top: 0 auto;
+    width: 100%;
+    font-size: 10px;
+    color: var(--grey);
+}
