Refatorando o sistema de like e dislike

--- a/gamehub.client/src/components/CommentsForm.module.css
+++ b/gamehub.client/src/components/CommentsForm.module.css
@@ -120,6 +120,8 @@
 .commentContent .content{
     font-size: 15px;
     color: var(--lightGrey);
+    max-width: 100%;
+    overflow-wrap: break-word;
 }
 
 .commentFooter{
