--- a/gamehub.client/src/components/CommentsForm.module.css
+++ b/gamehub.client/src/components/CommentsForm.module.css
@@ -94,8 +94,24 @@
     justify-content: space-between;
 }
 
+.commentHeader div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.commentHeader img{
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    object-fit: cover;
+    box-shadow: 0px 0px 5px var(--black);
+}
+
 .commentHeader .name{
-    font-size: 13px;
+    font-size: 18px;
     color: var(--lightGrey);
     font-weight: bold;
 }
@@ -103,7 +119,7 @@
 .commentHeader .trashButton{
     padding: 2px;
     background-color: transparent;
-    font-size: 17px;
+    font-size: 18px;
     transition: all 0.3s ease;
 }
 
@@ -118,7 +134,7 @@
 }
 
 .commentContent .content{
-    font-size: 15px;
+    font-size: 16px;
     color: var(--lightGrey);
     max-width: 100%;
     overflow-wrap: break-word;
