--- a/gamehub.client/src/components/MakePostForm.module.css
+++ b/gamehub.client/src/components/MakePostForm.module.css
@@ -22,6 +22,12 @@
     background-color: var(--clearblack);
     gap: 1rem;
     min-width: 40%;
+    max-width: 60%;
+}
+
+.formPost div{
+    max-height: 100%;
+    width: 100%;
 }
 
 .formPost div label{
@@ -42,7 +48,22 @@
     width: 100%;
 }
 
+.formPost .divImg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.formPost img{
+    width: 100%;
+    max-height: 600px;
+    object-fit: cover;
+}
+
 .formPost div textarea{
+    max-width: 100%;
     height: 100px;
 }
 
