--- a/gamehub.client/src/routes/Logado.module.css
+++ b/gamehub.client/src/routes/Logado.module.css
@@ -85,14 +85,22 @@
     gap: 5px;
 }
 
+.postHeader img{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    box-shadow: 0px 0px 5px var(--black);
+}
+
 .postHeader p, .author, .date{
-    font-size: 14px;
+    font-size: 16px;
     color: var(--lightGrey);
 }
 
 .postHeader .author{
     font-weight: bold;
-    font-size: 18px;
+    font-size: 22px;
 }
 
 .postContent{
@@ -105,14 +113,14 @@
 }
 
 .postContent .title{
-    font-size: 25px;
+    font-size: 30px;
     font-weight: bold;
     max-width: 100%;
     overflow-wrap: break-word;
 }
 
 .postContent .content{
-    font-size: 18px;
+    font-size: 20px;
     color: var(--lightGrey);
     max-width: 100%;
     overflow-wrap: break-word;
