--- a/gamehub.client/src/routes/Logado.module.css
+++ b/gamehub.client/src/routes/Logado.module.css
@@ -85,6 +85,14 @@
     gap: 5px;
 }
 
+.postHeader .postUser{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .postHeader img{
     border-radius: 50%;
     width: 50px;
