--- a/gamehub.client/src/components/CommentsForm.module.css
+++ b/gamehub.client/src/components/CommentsForm.module.css
@@ -94,6 +94,11 @@
     justify-content: space-between;
 }
 
+.containerComments:hover .youSpan,
+.containerComments:hover .trashButton{
+    display: inline;
+}
+
 .commentHeader div{
     display: flex;
     flex-direction: row;
@@ -121,6 +126,10 @@
     background-color: transparent;
     font-size: 18px;
     transition: all 0.3s ease;
+}
+
+.trashButton{
+    display: none;
 }
 
 .trashButton .trashIcon{
@@ -190,6 +199,7 @@
 }
 
 .youSpan{
+    display: none;
     font-size: 12px;
     color: var(--grey);
 }
