--- a/gamehub.client/src/components/UserPostsComponent.module.css
+++ b/gamehub.client/src/components/UserPostsComponent.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 90%;
+    width: 85%;
     gap: 1rem;
 }
 
@@ -30,6 +30,39 @@
     flex-direction: row;
     align-items: center;
     gap: 5px;
+}
+
+.postHeader .postUser{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.postUser .trashButton{
+    display: none;
+}
+
+.postUser .trashButton{
+    padding: 2px;
+    background-color: transparent;
+    font-size: 18px;
+    transition: all 0.3s ease;
+}
+
+.postContent .postImage{
+    max-width: 100%;
+    max-height: 665px;
+    object-fit: cover;
+    border-radius: 10px;
+    border: 2px solid var(--mediumgrey);
+    transition: all 0.3s ease;
+}
+
+.divPost:hover .postImage{
+    border-color: var(--grey);
+    box-shadow: 0px 0px 5px var(--black);
 }
 
 .postHeader img{
@@ -71,6 +104,51 @@
     color: var(--lightGrey);
     max-width: 100%;
     overflow-wrap: break-word;
+}
+
+.divPost .divBtnImage{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.divPost .divBtnImage div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.divPost .divBtnImage label{
+    font-size: 14px;
+    color: var(--grey);
+}
+
+.divPost .btnShowImage{
+    background-color: transparent;
+    padding: 0px;
+    color: var(--lightGrey);
+    font-size: 15px;
+    font-weight: bold;
+    position: relative;
+    transition: all 0.3s ease;
+}
+
+.btnShowImage::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 0%;
+    height: 1px;
+    background-color: var(--turquoise);
+    transition: all 0.3s ease;
+}
+  
+.btnShowImage:hover::after{
+    width: 100%;
 }
 
 .postFooter{
@@ -122,4 +200,29 @@
     width: 100%;
     font-size: 10px;
     color: var(--grey);
+}
+
+.divPost:hover .youSpan,
+.divPost:hover .trashButton{
+    display: inline;
+}
+
+.youSpan{
+    font-size: 14px;
+    color: var(--grey);
+    display: none;
+}
+
+.trashButton{
+    display: none;
+}
+
+.trashButton .trashIcon{
+    fill: var(--grey);
+    transition: all 0.3s ease;
+}
+
+.trashButton:hover .trashIcon{
+    fill: crimson;
+    transform: scale(1.3);
 }
