--- a/gamehub.client/src/routes/Profile.module.css
+++ b/gamehub.client/src/routes/Profile.module.css
@@ -238,3 +238,12 @@
 .formBiography:focus-within .footerFormBiography{
     display: flex;
 }
+
+.divEditUser{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    width: 100%;
+}
