--- a/gamehub.client/src/routes/AnotherUserProfile.Module.css
+++ b/gamehub.client/src/routes/AnotherUserProfile.Module.css
@@ -122,6 +122,12 @@
     color: var(--lightGrey);
 }
 
+.divBiography p{
+    max-width: 100%;
+    overflow-wrap: break-word;
+}
+
+
 .noRegistry{
     text-shadow: none;
     font-weight: normal;
