Aplicando mais estilos na tela de perfil, criando a exibição de following e followers

--- a/gamehub.client/src/routes/AnotherUserProfile.Module.css
+++ b/gamehub.client/src/routes/AnotherUserProfile.Module.css
@@ -122,9 +122,15 @@
     color: var(--lightGrey);
 }
 
-.divBiography p{
+.anotherUserInfoFooter .divBiography p{
+    display: flex;
+    flex-direction: column;
     max-width: 100%;
     overflow-wrap: break-word;
+}
+
+.divBiography .spanData{
+    max-width: 100%;
 }
 
 
@@ -153,6 +159,48 @@
     font-size: 18px;
     color: var(--lightGrey);
     font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.divShowSimplified{
+    position: relative;
+    cursor: default;
+}
+
+.divSimplifiedData{
+    display: none;
+    position: absolute;
+    padding: 3px 5px;
+    border: 1px solid var(--lightGrey);
+    border-radius: 5px;
+    background-color: var(--black);
+    z-index: 1;
+}
+
+.divSimplifiedData p{
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    transition: all 0.3s ease;
+}
+
+.divSimplifiedData p:hover{
+    color: var(--whitesmoke);
+}
+
+.divSimplifiedData p img{
+    width: 30px;
+    height: 30px;
+}
+
+p .divShowSimplified:hover .divSimplifiedData{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    top: 15px;
 }
 
 .divBiography{
@@ -226,4 +274,9 @@
 
 .formBiography:focus-within .footerFormBiography{
     display: flex;
+}
+
+.youSpan{
+    font-size: 14px;
+    color: var(--grey);
 }
