--- a/gamehub.client/src/routes/Profile.module.css
+++ b/gamehub.client/src/routes/Profile.module.css
@@ -1,7 +1,6 @@
 .divProfileMain{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
@@ -12,6 +11,7 @@
     align-items: center;
     width: 70%;
     height: 100%;
+    margin-top: 95px;
 }
 
 .divUser .divUserInfo button, .btnCancelar{
@@ -320,4 +320,5 @@ p .divShowSimplified:hover .divSimplifiedData{
     justify-content: center;
     gap: 2rem;
     width: 100%;
+    margin-top: 95px;
 }
