--- a/gamehub.client/src/routes/Profile.module.css
+++ b/gamehub.client/src/routes/Profile.module.css
@@ -210,7 +210,7 @@ p:hover .spanPublic,
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 25px;
+    min-width: 25px;
 }
 
 .divSimplifiedData{
@@ -235,8 +235,13 @@ p:hover .spanPublic,
 }
 
 .divSimplifiedData p img{
-    width: 30px;
-    height: 30px;
+    border-radius: 50%;
+    min-width: 30px;
+    min-height: 30px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border: 2px solid var(--black);
 }
 
 .paragraph .divShowSimplified:hover .divSimplifiedData{
