--- a/gamehub.client/src/routes/ListFollowersOrFollowing.module.css
+++ b/gamehub.client/src/routes/ListFollowersOrFollowing.module.css
@@ -61,7 +61,7 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    width: 80%;
+    width: 70%;
 }
 
 .contentHearder{
@@ -120,6 +120,7 @@
 .userData:hover{
     transform: scale(1.1);
     border-color: var(--turquoise);
+    box-shadow: 0px 0px 10px var(--darkSlateGray);
 }
 
 .userData img{  
