--- a/gamehub.client/src/routes/ListCommunities.module.css
+++ b/gamehub.client/src/routes/ListCommunities.module.css
@@ -82,3 +82,70 @@
     font-size: 16px;
     font-weight: bold;
 }
+
+.mainContent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.communityDiv{
+    display: flex;
+    flex: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.communityData{
+    width: 160px;
+    height: 160px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    border-radius: 10px;
+    border: 2px solid var(--mediumgrey);
+    background-color: var(--lightBlack);
+    gap: 10px;
+    transition: all 0.3s ease;
+    position: relative;
+}
+
+.communityData:hover{
+    transform: scale(1.1);
+    border-color: var(--turquoise);
+    box-shadow: 0px 0px 10px var(--darkSlateGray);
+}
+
+.communityData img{  
+    min-width: 100px;
+    min-height: 100px;
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 100%;
+    object-fit: cover;
+    border: 2px solid var(--black);
+}
+
+.communityData p{
+    color: var(--lightGrey);
+}
+
+.noRegistry{
+    font-size: 16px;
+    color: var(--grey);
+    cursor: default;
+}
+
+.youSpan{
+    position: absolute;
+    font-size: 14px;
+    color: var(--grey);
+    bottom: 0;
+}
