--- a/gamehub.client/src/routes/CommunityPage.module.css
+++ b/gamehub.client/src/routes/CommunityPage.module.css
@@ -43,7 +43,7 @@
     width: 100%;
 }
 
-.infoHeader .headerInfo div{
+.infoHeader .headerInfo .divBtnController{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -52,35 +52,179 @@
     bottom: 30px;
 }
 
+.infoHeader .headerInfo .divBtnController button{
+    font-size: 15px;
+}
+
 .defaultBakground{
-    position: absolute;
     background-image: url(../image/background3.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.infoHeader .background{
+    position: absolute;
+    border-radius: 15px;
     width: 100%;
     height: 100%;
     z-index: -1;
 }
 
-.infoHeader .background{
-    border-radius: 15px;
-}
-
-.infoHeader div img{
+.infoHeader .headerInfo img{
     border-radius: 50%;
     min-width: 150px;
     min-height: 150px;
     max-width: 150px;
     max-height: 150px;
     object-fit: cover;
-    border: 10px solid var(--deepgray);
+    border: 8px solid var(--deepgray);
 }
 
-.infoHeader div h2{
-    margin: 10px 15px 10px 15px;
-    font-size: 35px;
+.headerInfo .divInfoController{
+    width: 600px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+}
+
+.headerInfo .divInfoController .infoDiv{
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    gap: 3rem;
+}
+
+.headerInfo .divInfoController .divName{
+    justify-content: left;
+}
+
+.headerInfo .divInfoController .paragraph{
+    display: flex;
+    flex-direction: row;
+    width: 180px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    padding: 5px 5px;
+    border: 2px solid var(--grey);
+    background-color: var(--clearblack);
+}
+
+.headerInfo .divInfoController .paragraph .infoLink,
+.spanData{
+    cursor: pointer;
+    color: var(--lightGrey);
+    transition: all 0.3s ease;
+}
+
+.headerInfo .divInfoController .paragraph .infoLink:hover,
+.spanData:hover{
+    color: var(--whitesmoke);
+}
+
+@keyframes showText {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 100%;
+    }
+}
+
+.headerInfo .divInfoController .infoCreator .infoLink:hover .imgCreator{
+    display: block;
+    animation-duration: 1s;
+    animation-name: showText;
+}
+
+.headerInfo .divInfoController .paragraph .infoLink .imgCreator{
+    position: absolute;
+    right: -50px;
+    display: none;
+    border-radius: 50%;
+    min-width: 35px;
+    min-height: 35px;
+    max-width: 35px;
+    max-height: 35px;
+    object-fit: cover;
+    border: 2px solid var(--black);
+    transition: all 0.3s ease;
+}
+
+.headerInfo .divInfoController .infoCreator .infoLink{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.divShowSimplified{
+    position: relative;
+    cursor: pointer;
+    margin-left: 5px;
+    min-width: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.paragraph .noRegistry{
+    margin-left: 5px;
+    min-width: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--grey);
+}
+
+.divSimplifiedData{
+    display: none;
+    position: absolute;
+    padding: 3px 5px;
+    border: 1px solid var(--lightGrey);
+    border-radius: 5px;
+    background-color: var(--black);
+    z-index: 1;
+}
+
+.divSimplifiedData p{
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.divSimplifiedData p:hover{
+    color: var(--whitesmoke);
+}
+
+.divSimplifiedData .spanData img{
+    border-radius: 50%;
+    min-width: 30px;
+    min-height: 30px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border: 2px solid var(--black);
+}
+
+.paragraph .divShowSimplified:hover .divSimplifiedData{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    top: -2px;
+    left: -2px;
+}
+
+.infoHeader .divInfoController h2{
+    font-size: 30px;
     text-shadow: 1px 1px 2px var(--turquoise);
+    max-width: 100%;
+    overflow-wrap: break-word;
 }
 
 .infoHeader .btnEdit{
@@ -100,4 +244,116 @@
 .infoHeader .btnEdit:hover{
     opacity: 1;
     border-color: var(--turquoise);
+}
+
+.infoFooter{
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.description{
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+}
+
+.description p{
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    overflow-wrap: break-word;
+}
+
+.description .title{
+    font-size: 18px;
+    color: var(--lightGrey);
+    font-weight: bold;
+}
+
+.description .spanData{
+    max-width: 100%;
+}
+
+.noRegistry{
+    color: var(--grey);
+}
+
+.createPost{
+    margin-top: 1rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 2px solid var(--lightGrey);
+}
+
+.buttonMakePost{
+    top: 13px;
+    position: absolute;
+    background-color: var(--deepgray);
+    padding: 5px 18px 5px 15px;
+    font-size: 22px;
+    font-weight: bold;
+    border: 2px solid var(--lightGrey);
+    border-radius: 50px;
+    z-index: 1;
+    transition: all 0.2s ease-in-out;
+}
+
+.formactivated{
+    position: relative;
+    margin-bottom: 2rem;
+}
+
+.buttonMakePost:hover{
+    border: 2px solid var(--turquoise);
+    transform: scale(1.02);
+}
+
+.buttonMakePost:hover p{
+    color: var(--turquoise);
+}
+
+.buttonMakePost:hover .makePostIcon{
+    fill: var(--turquoise);
+}
+
+.divMakePost{
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.divMakePost p{
+    transition: all 0.2s ease-in-out;
+}
+
+.makePostIcon{
+    fill: transparent;
+    transition: all 0.2s;
+}
+
+.formMakePost{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 1rem;
+    width: 100%;
+    height: 100%;
+}
+
+.headerInfo .divInfoController .game{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.headerInfo .divInfoController .game .spanData{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
