--- a/gamehub.client/src/routes/CommunityPage.module.css
+++ b/gamehub.client/src/routes/CommunityPage.module.css
@@ -71,6 +71,13 @@
     z-index: -1;
 }
 
+.communityInfo .infoHeader .background .imgBackground{
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    object-fit: cover;
+}
+
 .infoHeader .headerInfo img{
     border-radius: 50%;
     min-width: 150px;
@@ -160,6 +167,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .divShowSimplified{
@@ -346,14 +354,12 @@
 
 .headerInfo .divInfoController .game{
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .headerInfo .divInfoController .game .spanData{
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    word-break: break-all;
 }
