Aplicando estilos na página de post único

--- a/gamehub.client/src/routes/CommunityPage.module.css
+++ b/gamehub.client/src/routes/CommunityPage.module.css
@@ -86,6 +86,7 @@
     max-height: 150px;
     object-fit: cover;
     border: 8px solid var(--deepgray);
+    background-color: var(--black);
 }
 
 .headerInfo .divInfoController{
