--- a/gamehub.client/src/routes/Profile.module.css
+++ b/gamehub.client/src/routes/Profile.module.css
@@ -37,6 +37,75 @@
     padding: 0 2rem;
 }
 
+.divUserInfo .background{
+    position: relative;
+}
+
+.background .divEditBackground{
+    position: absolute;
+    top: 10px;
+    right: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.divEditBackground label, .divEditBackground span,
+.btnIcone label, .btnIcone span{
+    cursor: pointer;
+    color: var(--lightGrey);
+    transition: all 0.2s ease;
+}
+
+.divEditBackground span,
+.btnIcone span{
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.divEditBackground label:hover, .divEditBackground label:hover span,
+.btnIcone label:hover, .btnIcone label:hover span{
+    color: var(--turquoise);
+    transform: scale(1.01);
+}
+
+.divEditBackground label,
+.btnIcone label{
+    cursor: pointer;
+}
+
+.divEditBackground input,
+.btnIcone input{
+    display: none;
+}
+
+.btnBackground{
+    background-color: var(--clearblack);
+    border: 2px solid transparent;
+    padding: 5px 15px;
+    border-radius: 50px;
+    font-weight: bold;
+    transition: all 0.3s ease;
+}
+
+.btnBackground:hover{
+    border-color: var(--turquoise);
+}
+
+.imgBackground{
+    width: 100%;
+    min-height: 200px;
+    max-height: 200px;
+    border-radius: 15px;
+    object-fit: cover;
+    z-index: -1;
+}
+
 .userInfoContent{
     display: flex;
     flex-direction: row;
@@ -63,54 +132,151 @@ p:hover .spanPublic,
     display: block;
 }
 
-/* .userInfoContent:hover .spanPublic{
-    display: block;
-} */
-
 .userImg{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-width: 370px;
+    min-height: 420px;
+}
+
+.imgController{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     gap: 5px;
-    width: 420px;
-    height: 420px;
+    top: -150px;
 }
 
-.userImg img{
+.imgController .img{
     border-radius: 50%;
-    width: 350px;
-    height: 350px;
+    min-width: 250px;
+    min-height: 250px;
+    max-width: 250px;
+    max-height: 250px;
     object-fit: cover;
-    border: 2px solid var(--black);
+    border: 8px solid var(--deepgray);
+    background-color: var(--black);
+    margin-bottom: 2rem;
 }
 
-.userImg input[type="file"]{
+.imgController input[type="file"]{
     display: none;
 }
 
-.userImg label, .userImg span{
+.imgController label, .imgController .spanImg{
     cursor: pointer;
     color: var(--lightGrey);
     transition: all 0.2s ease;
 }
 
-.userImg span{
+.imgController .spanImg{
     font-weight: bold;
     text-decoration: underline;
 }
 
-.userImg label:hover, .userImg label:hover span{
+.imgController label:hover, .imgController label:hover .spanImg{
     color: var(--turquoise);
     transform: scale(1.01);
 }
 
+.footerDiv{
+    margin-top: 45px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
+    padding: 20px 10px;
+    border-radius: 10px;
+    background-color: var(--clearblack);
+}
+
+.footerDiv .paragraph,
+.userInfoFooter p{
+    width: 100%;
+    font-size: 18px;
+    color: var(--lightGrey);
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.link{
+    color: var(--lightGrey);
+}
+
+.divShowSimplified{
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.divShowSimplified span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 25px;
+}
+
+.divSimplifiedData{
+    display: none;
+    position: absolute;
+    padding: 3px 5px;
+    border: 1px solid var(--lightGrey);
+    border-radius: 5px;
+    background-color: var(--black);
+    z-index: 1;
+}
+
+.divSimplifiedData p{
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    transition: all 0.3s ease;
+}
+
+.divSimplifiedData p:hover{
+    color: var(--whitesmoke);
+}
+
+.divSimplifiedData p img{
+    border-radius: 50%;
+    min-width: 30px;
+    min-height: 30px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border: 2px solid var(--black);
+}
+
+.paragraph .divShowSimplified:hover .divSimplifiedData{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    top: -2px;
+    left: -2px;
+}
+
 .userData{
+    margin-left: 10px;
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 0 20px;
+    padding: 20px;
     gap: 15px;
+    border-radius: 10px;
+    background-color: var(--clearblack);
 }
 
 .userDataHeader{
@@ -176,85 +342,14 @@ p:hover .spanPublic,
     height: 100%
 }
 
-.footerDiv{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.userInfoFooter .paragraph,
-.userInfoFooter p{
-    width: 100%;
-    font-size: 18px;
-    color: var(--lightGrey);
-    font-weight: bold;
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-}
-
-.link{
-    color: var(--lightGrey);
-}
-
-.divShowSimplified{
-    position: relative;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.divShowSimplified span{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 25px;
-}
-
-.divSimplifiedData{
-    display: none;
-    position: absolute;
-    padding: 3px 5px;
-    border: 1px solid var(--lightGrey);
-    border-radius: 5px;
-    background-color: var(--black);
-    z-index: 1;
-}
-
-.divSimplifiedData p{
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.divSimplifiedData p:hover{
-    color: var(--whitesmoke);
-}
-
-.divSimplifiedData p img{
-    border-radius: 50%;
-    min-width: 30px;
-    min-height: 30px;
-    max-width: 30px;
-    max-height: 30px;
-    object-fit: cover;
-    border: 2px solid var(--black);
-}
-
-.paragraph .divShowSimplified:hover .divSimplifiedData{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    top: -2px;
-    left: -2px;
-}
-
 .divBiography{
     display: flex;
     flex-direction: column;
     max-width: 100%;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: var(--clearblack);
+    margin-bottom: 10px;
 }
 
 .divBiography p{
@@ -269,20 +364,20 @@ p:hover .spanPublic,
 }
 
 .userInfoFooter button {
-    margin: 1rem 0;
+    margin-top: 1rem;
     color: var(--lightGrey);
     border-color: var(--lightGrey);
     width: 200px;
 }
 
 .formBiography{
+    margin-top: 1rem;
     position: relative;
 }
 
 .biographyText{
     background-color: transparent;
     border: none;
-    margin-bottom: 1rem;
     border: 2px solid var(--grey);
     border-radius: 5px;
     padding: 2px 50px 2px 6px;
